[Flexslider][RTL] flexslider broken in RTL since updated to flexslider v2.7.2. fixes #884

--- a/assets/front/css/_parts/2_0_flexslider.css
+++ b/assets/front/css/_parts/2_0_flexslider.css
@@ -28,6 +28,13 @@ html[xmlns] .flexslider .slides { display: block; }
 * html .flexslider .slides { height: 1%;}
 .no-js .flexslider .slides > li:first-child { display: block; }
 
+/* RTL
+added for https://github.com/presscustomizr/hueman/issues/884
+*/
+[dir="rtl"] .flexslider {
+  direction:rtl;
+}
+
 /*  flexslider : default theme
 /* ------------------------------------ */
 .flexslider { margin: 0 0 60px; position: relative; zoom: 1; }
